--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             font-size: 17px;
             font-weight: bold;
             background-color: rgba(0, 233, 241, 0.349);
+            margin-bottom: 10px;
         }
 
         .word-count-container {
@@ -50,47 +51,61 @@
         span {
             color: rgba(240, 0, 0, 0.534);
             font-size: 30px;
-          
         }
 
         h1 {
             margin-top: 10px;
             font-size: 40px;
         }
-        b{
-            color: rgb(57, 148, 190);
-            
+
+        b {
+            color: rgba(50, 133, 172, 0.884);
+        }
+        .footer p{
+            font-size: 12px;
+            text-align: right;
+            margin-right: 20px;
+        }
+        .footer i{
+            font-weight: bold;
+            color: rgb(28, 45, 121);
+            font-size: 13px;
         }
     </style>
 </head>
 
 <body>
-
     <div>
         <h1><b>W</b>ord <b>C</b>ounter</h1>
         <div class="word-count-container">
             <h3><span id="words">0</span> words <span id="characters">0</span> characters</h3>
         </div>
-        <textarea placeholder="Start typing, or copy and paste your text here..." name="" cols="" rows="" id="textarea-box"></textarea>
+        <textarea placeholder="Start typing, or copy and paste your text here..." name="" cols="" rows=""
+            id="textarea-box"></textarea>
         <br>
         <br>
         <button id="btn-count">Count</button>
     </div>
+    <footer class="footer">
+<p>Made by <i>Md Sabbir Hossain</i></p>
+    </footer>
 
     <script>
-
         document.getElementById('btn-count').addEventListener('click', function () {
             let allTexts = document.getElementById('textarea-box').value;
             let splittedText = allTexts.split(' ');
             let wordsLength = splittedText.length;
-            document.getElementById('words').innerText = wordsLength;
             document.getElementById('characters').innerText = allTexts.length;
+            if (allTexts.length === 0) {
+                document.getElementById('words').innerText = 0;
 
+            }
+            else {
+                document.getElementById('words').innerText = wordsLength;
+            }
         })
 
-
     </script>
-
 </body>
 
 </html>
