--- a/index.html
+++ b/index.html
@@ -21,14 +21,30 @@
             color: white;
         }
 
+        #btn-delete:hover {
+            background-color: rgb(212, 0, 0);
+            color: white;
+        }
+
         #btn-count {
             border: 1px solid black;
             padding: 12px 30px;
             border-radius: 5px;
             font-size: 17px;
             font-weight: bold;
-            background-color: rgba(0, 233, 241, 0.349);
+            background-color: rgb(255, 255, 255);
             margin-bottom: 10px;
+        }
+
+        #btn-delete {
+            border: 1px solid black;
+            padding: 12px 30px;
+            border-radius: 5px;
+            color: red;
+            font-size: 17px;
+            font-weight: bold;
+            background-color: rgb(218, 218, 218);
+            margin-left: 20px;
         }
 
         .word-count-container {
@@ -61,12 +77,14 @@
         b {
             color: rgba(50, 133, 172, 0.884);
         }
-        .footer p{
+
+        .footer p {
             font-size: 12px;
             text-align: right;
             margin-right: 20px;
         }
-        .footer i{
+
+        .footer i {
             font-weight: bold;
             color: rgb(28, 45, 121);
             font-size: 13px;
@@ -85,9 +103,10 @@
         <br>
         <br>
         <button id="btn-count">Count</button>
+        <button id="btn-delete">Delete</button>
     </div>
     <footer class="footer">
-<p>Made by <i>Md Sabbir Hossain</i></p>
+        <p>Made by <i>Md Sabbir Hossain</i></p>
     </footer>
 
     <script>
@@ -103,6 +122,14 @@
             else {
                 document.getElementById('words').innerText = wordsLength;
             }
+        })
+
+        document.getElementById('btn-delete').addEventListener('click', function () {
+            document.getElementById('textarea-box').value = '';
+            document.getElementById('words').innerText = 0;
+            document.getElementById('characters').innerText = 0;
+
+
         })
 
     </script>
